@@ -807,6 +807,30 @@ private:
 };
 
 
+// micro-tuning/instance implementation
+
+class synthv1_tun : public synthv1_sched
+{
+public:
+
+	// ctor.
+	synthv1_tun(synthv1 *pSynth) : synthv1_sched(pSynth, Tuning),
+		refPitch(440.0f), refNote(69), enabled0(false) {}
+
+	// processor.
+	void process(int) { instance()->updateTuning(); }
+
+	synthv1_port enabled;
+
+	float   refPitch;
+	int     refNote;
+	QString scaleFile;
+	QString keyMapFile;
+
+	bool    enabled0;
+};
+
+
 // polyphonic synth implementation
 
 class synthv1_impl
@@ -837,6 +861,18 @@ public:
 
 	synthv1_controls *controls();
 	synthv1_programs *programs();
+
+	void setTuningRefPitch(float refPitch);
+	float tuningRefPitch() const;
+
+	void setTuningRefNote(int refNote);
+	int tuningRefNote() const;
+
+	void setTuningScaleFile(const char *pszScaleFile);
+	const char *tuningScaleFile() const;
+
+	void setTuningKeyMapFile(const char *pszKeyMapFile);
+	const char *tuningKeyMapFile() const;
 
 	void updateTuning();
 
@@ -916,6 +952,7 @@ private:
 	synthv1_controls m_controls;
 	synthv1_programs m_programs;
 	synthv1_midi_in  m_midi_in;
+	synthv1_tun      m_tun;
 
 	uint16_t m_nchannels;
 	float    m_srate;
@@ -1012,7 +1049,7 @@ synthv1_voice::synthv1_voice ( synthv1_impl *pImpl ) :
 synthv1_impl::synthv1_impl (
 	synthv1 *pSynth, uint16_t nchannels, float srate )
 	: m_controls(pSynth), m_programs(pSynth),
-		m_midi_in(pSynth), m_bpm(180.0f), m_running(false)
+		m_midi_in(pSynth), m_tun(pSynth), m_bpm(180.0f), m_running(false)
 {
 	// max env. stage length (default)
 	m_dco1.envtime0 = m_dco2.envtime0 = 0.0001f * MAX_ENV_MSECS;
@@ -1468,6 +1505,7 @@ synthv1_port *synthv1_impl::paramPort ( synthv1::ParamIndex index )
 	case synthv1::REV1_WIDTH:     pParamPort = &m_rev.width;        break;
 	case synthv1::DYN1_COMPRESS:  pParamPort = &m_dyn.compress;     break;
 	case synthv1::DYN1_LIMITER:   pParamPort = &m_dyn.limiter;      break;
+	case synthv1::TUN1_ENABLED:   pParamPort = &m_tun.enabled;      break;
 	case synthv1::KEY1_LOW:       pParamPort = &m_key.low;          break;
 	case synthv1::KEY1_HIGH:      pParamPort = &m_key.high;         break;
 	default: break;
@@ -2117,11 +2155,69 @@ synthv1_programs *synthv1_impl::programs (void)
 
 
 // Micro-tuning support
+
+void synthv1_impl::setTuningRefPitch ( float refPitch )
+{
+	m_tun.refPitch = refPitch;
+}
+
+float synthv1_impl::tuningRefPitch (void) const
+{
+	return m_tun.refPitch;
+}
+
+void synthv1_impl::setTuningRefNote ( int refNote )
+{
+	m_tun.refNote = refNote;
+}
+
+int synthv1_impl::tuningRefNote (void) const
+{
+	return m_tun.refNote;
+}
+
+
+void synthv1_impl::setTuningScaleFile ( const char *pszScaleFile )
+{
+	m_tun.scaleFile = QString::fromUtf8(pszScaleFile);
+}
+
+const char *synthv1_impl::tuningScaleFile (void) const
+{
+	return m_tun.scaleFile.toUtf8().constData();
+}
+
+
+void synthv1_impl::setTuningKeyMapFile ( const char *pszKeyMapFile )
+{
+	m_tun.keyMapFile = QString::fromUtf8(pszKeyMapFile);
+}
+
+const char *synthv1_impl::tuningKeyMapFile (void) const
+{
+	return m_tun.keyMapFile.toUtf8().constData();
+}
+
+
 void synthv1_impl::updateTuning (void)
 {
-
+	if (m_tun.enabled0) {
+		// Instance micro-tuning, possibly from Scala keymap and scale files...
+		synthv1_tuning tuning(
+			m_tun.refPitch,
+			m_tun.refNote);
+		if (m_tun.keyMapFile.isEmpty())
+		if (!m_tun.keyMapFile.isEmpty())
+			tuning.loadKeyMapFile(m_tun.keyMapFile);
+		if (!m_tun.scaleFile.isEmpty())
+			tuning.loadScaleFile(m_tun.scaleFile);
+		for (int note = 0; note < MAX_NOTES; ++note)
+			m_freqs[note] = tuning.noteToPitch(note);
+		// Done instance tuning.
+	}
+	else
 	if (m_config.bTuningEnabled) {
-		// Custom micro-tuning, possibly from Scala keymap and scale files...
+		// Global/config micro-tuning, possibly from Scala keymap and scale files...
 		synthv1_tuning tuning(
 			m_config.fTuningRefPitch,
 			m_config.iTuningRefNote);
@@ -2131,12 +2227,12 @@ void synthv1_impl::updateTuning (void)
 			tuning.loadScaleFile(m_config.sTuningScaleFile);
 		for (int note = 0; note < MAX_NOTES; ++note)
 			m_freqs[note] = tuning.noteToPitch(note);
-		// Done custom tuning.
+		// Done global/config tuning.
 	} else {
-		// Native tuning, 12-tone equal temperament western standard...
+		// Native/default tuning, 12-tone equal temperament western standard...
 		for (int note = 0; note < MAX_NOTES; ++note)
 			m_freqs[note] = synthv1_freq(note);
-		// Done native tuning.
+		// Done native/default tuning.
 	}
 }
 
@@ -2295,6 +2391,11 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 	if (lfo2_enabled) {
 		lfo2_wave.reset_test(
 			synthv1_wave::Shape(*m_lfo2.shape), *m_lfo2.width);
+	}
+
+	if (m_tun.enabled0 != *m_tun.enabled) {
+		m_tun.enabled0  = *m_tun.enabled;
+		m_tun.schedule();
 	}
 
 	// per voice
@@ -2795,6 +2896,49 @@ void synthv1::directNoteOn ( int note, int vel )
 
 
 // Micro-tuning support
+void synthv1::setTuningRefPitch ( float refPitch )
+{
+	m_pImpl->setTuningRefPitch(refPitch);
+}
+
+float synthv1::tuningRefPitch (void) const
+{
+	return m_pImpl->tuningRefPitch();
+}
+
+void synthv1::setTuningRefNote ( int refNote )
+{
+	m_pImpl->setTuningRefNote(refNote);
+}
+
+int synthv1::tuningRefNote (void) const
+{
+	return m_pImpl->tuningRefNote();
+}
+
+
+void synthv1::setTuningScaleFile ( const char *pszScaleFile )
+{
+	m_pImpl->setTuningScaleFile(pszScaleFile);
+}
+
+const char *synthv1::tuningScaleFile (void) const
+{
+	return m_pImpl->tuningScaleFile();
+}
+
+
+void synthv1::setTuningKeyMapFile ( const char *pszKeyMapFile )
+{
+	m_pImpl->setTuningKeyMapFile(pszKeyMapFile);
+}
+
+const char *synthv1::tuningKeyMapFile (void) const
+{
+	return m_pImpl->tuningKeyMapFile();
+}
+
+
 void synthv1::updateTuning (void)
 {
 	m_pImpl->updateTuning();
