@@ -206,7 +206,7 @@ public:
 		REV1_WIDTH,
 		DYN1_COMPRESS,
 		DYN1_LIMITER,
-
+		TUN1_ENABLED,
 		KEY1_LOW,
 		KEY1_HIGH,
 
@@ -236,6 +236,18 @@ public:
 	uint32_t midiInCount();
 
 	void directNoteOn(int note, int vel);
+
+	void setTuningRefPitch(float refPitch);
+	float tuningRefPitch() const;
+
+	void setTuningRefNote(int refNote);
+	int tuningRefNote() const;
+
+	void setTuningScaleFile(const char *pszScaleFile);
+	const char *tuningScaleFile() const;
+
+	void setTuningKeyMapFile(const char *pszKeyMapFile);
+	const char *tuningKeyMapFile() const;
 
 	void updateTuning();
 
